# tripleo-operator-ansible

./: .gitignore  .stestr.conf  README.md  setup.cfg  tox.ini
tripleo/operator/: README.md  galaxy.yml
tripleo/operator/plugins/action/: timestamp_file.py  tripleo_undercloud_conf.py
tripleo/operator/plugins/filter/: shell_args.py
tripleo/operator/plugins/modules/: timestamp_file.py
tripleo/operator/roles/: README.md
tripleo/operator/roles/tripleo-repos/: README.md
tripleo/operator/roles/tripleo-repos/tasks/: install.yml  main.yml
tripleo/operator/roles/tripleo-undercloud-minion/defaults/: main.yml
tripleo/operator/roles/tripleo-undercloud-minion/handlers/: main.yml
tripleo/operator/roles/tripleo-undercloud-minion/meta/: main.yml
tripleo/operator/roles/tripleo-undercloud-minion/tasks/: install.yml  main.yml  upgrade.yml
tripleo/operator/roles/tripleo-undercloud-minion/tests/: test.yml
tripleo/operator/roles/tripleo-undercloud-minion/vars/: main.yml
tripleo/operator/roles/tripleo-undercloud/defaults/: main.yml
tripleo/operator/roles/tripleo-undercloud/handlers/: main.yml
tripleo/operator/roles/tripleo-undercloud/meta/: main.yml
tripleo/operator/roles/tripleo-undercloud/tasks/: backup.yml  config.yml  install.yml  main.yml  upgrade.yml
tripleo/operator/roles/tripleo-undercloud/tests/: test.yml
tripleo/operator/roles/tripleo-undercloud/vars/: main.yml
tripleo/operator/tests/plugins/action/: test_timestamp_file.py  test_tripleo_undercloud_conf.py
